A bit of theming
Note: Fuck Material 3, you can't even tell the status bar apart from the rests of the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:id="@+id/drawCanvas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:background="@color/white" />
 
 
     <com.google.android.material.appbar.AppBarLayout
