--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_marginStart="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/toggleToolbar"
-        android:src="@drawable/baseline_arrow_drop_up_24" />
+        android:src="@drawable/baseline_arrow_drop_up_24"
+        android:tint="@color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
