Add the ability to save files as an SVG

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:background="@color/white" />
+        android:background="#CCCCCC" />
 
 
     <com.google.android.material.appbar.AppBarLayout
