--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -34,12 +34,14 @@
         android:checkable="true"
         android:icon="@drawable/baseline_brush_24"
         android:title="@string/tool_paintbrush"
+        android:iconTint="?attr/colorControlNormal"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/tool_eraser"
         android:checkable="true"
         android:icon="@drawable/baseline_eraser_24"
+        android:iconTint="?attr/colorControlNormal"
         android:title="@string/tool_eraser"
         app:showAsAction="always" />
 
@@ -47,6 +49,7 @@
         android:id="@+id/tool_pan"
         android:checkable="true"
         android:icon="@drawable/baseline_pan_tool_24"
+        android:iconTint="?attr/colorControlNormal"
         android:title="@string/tool_pan"
         app:showAsAction="always"/>
 
@@ -54,6 +57,7 @@
         android:id="@+id/tool_select"
         android:checkable="true"
         android:icon="@drawable/baseline_select_all_24"
+        android:iconTint="?attr/colorControlNormal"
         android:title="@string/tool_select"
         app:showAsAction="always"/>
 
