--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     tools:context=".MainActivity">
 
 
@@ -21,8 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:fitsSystemWindows="true"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:backgroundTint="#F2FFFFFF"
+        android:backgroundTintMode="multiply"
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
@@ -41,7 +42,6 @@
         android:layout_marginStart="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/toggleToolbar"
-        android:src="@drawable/baseline_arrow_drop_up_24"
-        android:tint="@color/white" />
+        android:src="@drawable/baseline_arrow_drop_up_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
