--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.FreePaint" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Base.Theme.FreePaint" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Primary brand color. -->
+        <!--
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+        -->
+        <!-- Secondary brand color. -->
+        <!--
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        -->
+        <!-- Status bar color. -->
+        <!--
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+-->
+
+        <item name="colorControlNormal">@color/black</item>
+
     </style>
 
     <style name="Theme.FreePaint" parent="Base.Theme.FreePaint"/>
