--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:background="#CCCCCC" />
+        android:background="#CCCCCC"
+        android:fitsSystemWindows="false" />
 
 
     <com.google.android.material.appbar.AppBarLayout
