--- a/app/src/main/res/layout/more_options.xml
+++ b/app/src/main/res/layout/more_options.xml
@@ -1,33 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/more_options"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:elevation="9dp"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:paddingStart="32dp"
+    android:paddingEnd="32dp"
+    app:behavior_hideable="true"
+    app:behavior_peekHeight="256dp"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <FrameLayout
-        android:id="@+id/standard_bottom_sheet"
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="?attr/bottomSheetStyle">
-        <!--android:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"-->
+        android:layout_height="wrap_content"
+        android:text="More Options"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <!-- Bottom sheet contents. -->
-        <TextView
-            android:layout_width="wrap_content"
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/filledShapes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/more_option_margin"
+        android:text="Draw filled shapes" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/documentWidth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/more_option_margin"
+        android:hint="@string/document_width_setting">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/documentWidthEdit"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title" />
+            android:gravity="top"
+            android:minLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/documentHeight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/more_option_margin"
+        android:hint="@string/document_height_setting">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/documentHeightEdit"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Supporting Text"/>
+            android:gravity="top"
+            android:minLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/bottomsheet_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Action" />
-
-    </FrameLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
