--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:contentDescription="@string/toggleToolbar"
         android:src="@drawable/baseline_arrow_drop_up_24" />
 
-    <include layout="@layout/more_options" />
+    <include layout="@layout/settings_popup" />
 
     <!-- More options menu -->
 
