--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <!-- TODO: implement a proper dark theme? -->
     <style name="Base.Theme.FreePaint" parent="Theme.Material3.DayNight.NoActionBar">
