--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.FreePaint" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -23,5 +23,5 @@
 
     </style>
 
-    <style name="Theme.FreePaint" parent="Base.Theme.FreePaint"/>
+    <style name="Theme.FreePaint" parent="Base.Theme.FreePaint" />
 </resources>
