Fixed some color issues for the icon/settings popup

--- a/app/src/main/res/layout/settings_popup.xml
+++ b/app/src/main/res/layout/settings_popup.xml
@@ -4,7 +4,7 @@
     android:id="@+id/more_options"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="?attr/colorSurface"
     android:elevation="9dp"
     android:orientation="vertical"
     android:paddingTop="16dp"
