--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,7 +3,7 @@
     android:height="108dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#E1E4FF">
+    android:tint="@color/md_theme_dark_primary">
   <group android:scaleX="0.4"
       android:scaleY="0.4"
       android:translateX="7.1024"
