Code refactoring/formatting/commenting with Javadoc

--- a/app/src/main/res/layout/settings_popup.xml
+++ b/app/src/main/res/layout/settings_popup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/more_options"
+    android:id="@+id/settings_popup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSurface"
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Settings"
+        android:text="@string/settings_header"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
