Make preferences menu conform to Material 3

--- a/app/src/main/res/layout/settings_popup.xml
+++ b/app/src/main/res/layout/settings_popup.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/settings_popup"
+    style="@style/Widget.Material3.BottomSheet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorSurface"
-    android:elevation="9dp"
     android:orientation="vertical"
-    android:paddingTop="16dp"
-    app:behavior_hideable="true"
-    app:behavior_peekHeight="256dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+    <!-- Drag handle for accessibility -->
+    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:id="@+id/drag_handle"
+        android:paddingBottom="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -22,11 +25,10 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+
     <FrameLayout
         android:id="@+id/moreOptionsPreferences"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
