--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,15 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="@color/md_theme_dark_primary">
-  <group android:scaleX="0.4"
-      android:scaleY="0.4"
-      android:translateX="7.1024"
-      android:translateY="7.1024">
+    android:tint="#222222"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group android:scaleX="0.7"
+      android:scaleY="0.7"
+      android:translateX="76.8"
+      android:translateY="76.8">
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M7,14c-1.66,0 -3,1.34 -3,3 0,1.31 -1.16,2 -2,2 0.92,1.22 2.49,2 4,2 2.21,0 4,-1.79 4,-4 0,-1.66 -1.34,-3 -3,-3zM20.71,4.63l-1.34,-1.34c-0.39,-0.39 -1.02,-0.39 -1.41,0L9,12.25 11.75,15l8.96,-8.96c0.39,-0.39 0.39,-1.02 0,-1.41z"/>
+        android:pathData="m263.1,120.82h-62.23c-9.62,0 -14.77,7.33 -11.69,16.45 14.66,43.4 50.93,159.77 29.33,190.06 -3.07,4.31 -11.49,7.84 -16.78,8.7 -33.84,5.51 -47.17,-40.48 -43.32,-68.17 0.48,-3.43 1.92,-8.89 3.05,-12.17 10.22,-29.6 32.79,-36.14 96.32,-38.17"
+        android:strokeWidth="20"
+        android:strokeColor="@android:color/white"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="m263.42,248.9c16.58,14.96 26.87,12.28 40.58,-8.21 13.71,-20.48 40.45,-16.37 47.63,2.78 7.18,19.14 -0.26,38.6 -23.41,39.87 -23.15,1.26 -25.15,-23.15 -30.51,-9.21 -7.75,20.15 -21.58,62.76 -11.9,117.06"
+        android:strokeWidth="20"
+        android:strokeColor="@android:color/white"
+        android:strokeLineCap="round"/>
   </group>
 </vector>
