Add switch to save preferences when the app exits
This is actually not true--preferences are reset when the app opens if this is set to false--but this is done because the app can always be killed before it has a chance to react and reset preferences.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -55,4 +55,10 @@
         app:title="@string/toggleToolbarToggle"
         app:widgetLayout="@layout/switch_preference_material" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        app:key="savePrefsOnExit"
+        app:title="@string/save_preferences_on_exit"
+        app:widgetLayout="@layout/switch_preference_material" />
+
 </PreferenceScreen>
