Use a combined bottom bar instead of a top bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,45 +18,56 @@
         android:contentDescription="@string/draw_canvas_description"
         android:fitsSystemWindows="false" />
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottomAppBar"
+        style="@style/Widget.Material3.BottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:animateLayoutChanges="true"
-        android:backgroundTint="#F2FFFFFF"
-        android:backgroundTintMode="multiply"
-        android:fitsSystemWindows="true"
-        android:forceHasOverlappingRendering="false">
+        android:background="?attr/colorSurface"
+        app:contentInsetEnd="0dp"
+        app:contentInsetStart="0dp"
+        app:fabAnchorMode="embed"
+        app:paddingBottomSystemWindowInsets="false">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+        <!-- NOTE: layout_marginEnd is a hack to push everything over for the FAB. -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="80dp"
+            android:background="#00FFFFFF"
+            app:elevation="0dp"
+            app:labelVisibilityMode="unlabeled"
+            app:layout_anchor="@+id/bottomAppBar"
+            app:layout_anchorGravity="center"
+            app:menu="@menu/menu_main" />
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <!-- <include layout="@layout/content_main" /> -->
+    </com.google.android.material.bottomappbar.BottomAppBar>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/ExpandToolbar"
+        android:id="@+id/FAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/fab_margin"
-        android:layout_marginBottom="16dp"
-        android:contentDescription="@string/toggleToolbar"
-        android:src="@drawable/baseline_arrow_drop_up_24"
-        android:visibility="visible" />
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add"
+        android:visibility="visible"
+        app:layout_anchor="@id/bottomAppBar" />
+
 
     <TextView
         android:id="@+id/infoBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="28dp"
         android:background="?attr/colorSurface"
         android:backgroundTint="#F2FFFFFF"
         android:backgroundTintMode="multiply"
         android:padding="10dp"
+        android:visibility="invisible"
         app:layout_anchor="@+id/drawCanvas"
         app:layout_anchorGravity="bottom|center" />
+
+    <!-- <include layout="@layout/content_main" /> -->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
