--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,33 +26,17 @@
         android:layout_gravity="bottom"
         android:animateLayoutChanges="true"
         android:background="?attr/colorSurface"
+        app:menu="@menu/bottom_app_bar"
         app:contentInsetEnd="0dp"
         app:contentInsetStart="0dp"
         app:fabAnchorMode="embed"
-        app:paddingBottomSystemWindowInsets="false">
-
-        <!-- NOTE: layout_marginEnd is a hack to push everything over for the FAB. -->
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="80dp"
-            android:background="#00FFFFFF"
-            app:elevation="0dp"
-            app:labelVisibilityMode="unlabeled"
-            app:layout_anchor="@+id/bottomAppBar"
-            app:layout_anchorGravity="center"
-            app:menu="@menu/menu_main" />
-
-    </com.google.android.material.bottomappbar.BottomAppBar>
+        app:paddingBottomSystemWindowInsets="false"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/FAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
         android:src="@drawable/baseline_settings_24"
-        android:visibility="visible"
         app:layout_anchor="@id/bottomAppBar" />
 
 
