--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,11 @@
 
     <TextView
         android:id="@+id/infoBar"
-        android:layout_width="match_parent"
+        style="@style/Widget.Material3.Snackbar.TextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:background="?attr/colorSurface"
         android:backgroundTint="#F2FFFFFF"
         android:backgroundTintMode="multiply"
