Implement exporting to a PNG
This was fairly easy but made me realise how much my code has to be refactored and cleaned...

--- a/app/src/main/res/menu/bottom_app_bar.xml
+++ b/app/src/main/res/menu/bottom_app_bar.xml
@@ -45,6 +45,9 @@
                 <item
                     android:id="@+id/action_load"
                     android:title="@string/action_load" />
+                <item
+                    android:id="@+id/action_export"
+                    android:title="@string/action_export" />
             </group>
         </menu>
     </item>
