--- a/app/src/main/res/menu-v26/bottom_app_bar.xml
+++ b/app/src/main/res/menu-v26/bottom_app_bar.xml
@@ -47,6 +47,9 @@
                 <item
                     android:id="@+id/action_load"
                     android:title="@string/action_load" />
+                <item
+                    android:id="@+id/action_export"
+                    android:title="@string/action_export" />
             </group>
         </menu>
     </item>
