--- a/app/src/main/res/layout/tool_popup.xml
+++ b/app/src/main/res/layout/tool_popup.xml
@@ -11,55 +11,69 @@
     android:padding="20dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/select_tool_paintbrush"
-        style="@style/Widget.Material3.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/not_selected_button"
         android:contentDescription="@string/tool_paintbrush"
         android:padding="20dp"
         android:text="@string/tool_paintbrush"
         android:textAlignment="textStart"
-        app:icon="@drawable/baseline_brush_24" />
+        android:textAllCaps="false"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/select_tool_spraypaint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/not_selected_button"
         android:contentDescription="@string/tool_spraypaint"
         android:padding="20dp"
         android:text="@string/tool_spraypaint"
         android:textAlignment="textStart"
-        app:icon="@drawable/baseline_spraypaint_24" />
+        android:textAllCaps="false" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/select_tool_eraser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/not_selected_button"
         android:contentDescription="@string/tool_eraser"
         android:padding="20dp"
         android:text="@string/tool_eraser"
         android:textAlignment="textStart"
-        app:icon="@drawable/baseline_eraser_24" />
+        android:textAllCaps="false" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/select_tool_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/not_selected_button"
         android:contentDescription="@string/tool_select"
         android:padding="20dp"
         android:text="@string/tool_select"
         android:textAlignment="textStart"
-        app:icon="@drawable/baseline_select_all_24" />
+        android:textAllCaps="false" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/select_tool_pan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/not_selected_button"
         android:contentDescription="@string/tool_pan"
         android:padding="20dp"
         android:text="@string/tool_pan"
         android:textAlignment="textStart"
-        app:icon="@drawable/baseline_pan_tool_24" />
+        android:textAllCaps="false" />
 
 </LinearLayout>
